2018-08-20  Yusuke Suzuki  <yusukesuzuki@slowstart.org>

        [JSC] HeapUtil should care about pointer overflow
        https://bugs.webkit.org/show_bug.cgi?id=188740

        Reviewed by Saam Barati.

        `pointer - sizeof(IndexingHeader) - 1` causes an undefined behavior if a pointer overflows.
        For example, if `pointer` is nullptr, it causes pointer overflow. Instead of calculating this
        with `char*` pointer, we cast it to `uintptr_t` temporarily. This issue is found by UBSan.

        * heap/HeapUtil.h:
        (JSC::HeapUtil::findGCObjectPointersForMarking):

2018-08-19  Yusuke Suzuki  <yusukesuzuki@slowstart.org>

        [JSC] Should not rotate constant with 64
        https://bugs.webkit.org/show_bug.cgi?id=188556

        Reviewed by Saam Barati.

        To defend against JIT splaying, we rotate a constant with a randomly generated seed.
        But if a seed becomes 64 or 0, the following code performs `value << 64` or `value >> 64`
        where value's type is uint64_t, and they cause undefined behaviors (UBs). This patch limits
        the seed in the range of [1, 63] not to generate code causing UBs. This is found by UBSan.

        * assembler/MacroAssembler.h:
        (JSC::MacroAssembler::generateRotationSeed):
        (JSC::MacroAssembler::rotationBlindConstant):

2018-08-20  Saam barati  <sbarati@apple.com>

        Inline DataView accesses into DFG/FTL
        https://bugs.webkit.org/show_bug.cgi?id=188573
        <rdar://problem/43286746>

        Reviewed by Michael Saboff.

        This patch teaches the DFG/FTL to inline DataView accesses. The approach is
        straight forward. We inline the various get*/set* operations as intrinsics.
        
        This patch takes the most obvious approach for now. We OSR exit when:
        - An isLittleEndian argument is provided, and is not a boolean.
        - The index isn't an integer.
        - The |this| isn't a DataView.