@@ -1,3 +1,12 @@
+2018-08-27  Patrick Griffis  <pgriffis@igalia.com>
+
+        [GTK][JSC] Add warn_unused_result attribute to some APIs
+        https://bugs.webkit.org/show_bug.cgi?id=188983
+
+        Reviewed by Michael Catanzaro.
+
+        * API/glib/JSCValue.h:
+
 2018-08-20  Yusuke Suzuki  <yusukesuzuki@slowstart.org>
 
         [JSC] HeapUtil should care about pointer overflow
